# examples-repo

./: .gitignore  README.md
1_bger_scraper/: 1_bger_scraper.py  erklaerung_bger_scraper.ipynb  pyproject.toml
2_syntetic_data/: .gitignore  README.md  config.py  generator.py  main.py  models.py  pipeline.py  prompts.py  pyproject.toml
2_syntetic_data/data/: case_bibles.json
4_rag/: CLAUDE.md  app.py  config.py  indexer.py  pyproject.toml  rag_chain.py  retriever.py  tutorial.ipynb
5_agentic_rag/: agent.py  app.py  config.py  indexer.py  pyproject.toml  tools.py  tutorial.ipynb
