[project]
name = "agentic-rag-bauhaftpflicht"
version = "0.1.0"
description = "Agentic RAG system for construction liability cases"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.7",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.0",
    "dotenv>=0.9.9",
    "streamlit>=1.19.0",
]
